--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body{
     background-image:linear-gradient(to right,rgba(3, 31, 14, 0.377),rgba(14, 15, 15, 0.671)),url("pot.jpg");
     background-size:cover;
-    
+     background-repeat:no-repeat;
 }
 .Header_left{
     position:absolute;
